# liars-bar

./: .dockerignore  .gitignore  Dockerfile  README.md
.github/workflows/: deploy.yml
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py
backend/app/game_logic/: base.py  deck_engine.py  dice_engine.py  roulette.py
backend/app/managers/: connection.py  game.py  table.py
backend/app/models/: events.py  game.py  player.py  table.py
backend/app/routers/: lobby.py  ws.py
backend/app/storage/: base.py  memory.py  r2.py
backend/tests/: test_deck_engine.py  test_dice_engine.py
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/api/: http.ts  ws.ts
frontend/src/audio/: sounds.ts
frontend/src/components/: AnimalAvatar.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/pages/: GamePage.tsx  LobbyPage.tsx  NicknamePage.tsx  TablePage.tsx
frontend/src/stores/: game.ts  lobby.ts  session.ts  table.ts
frontend/src/types/: events.ts  models.ts
